# ftxui-sqlite-planner

./: CMakeLists.txt
include/: database.h
src/: database.cpp  main.cpp
